--- a/DesignerRHN/DesignerRHN-war/web/cargo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/cargo.xhtml
@@ -92,7 +92,7 @@
                                         </f:facet>   
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100px; margin: -14px; height: 26px; border: none; color: blue" id="fooGrupoSalarial"  value=" "/>
+                                        <p:commandButton style="width: 150px; margin: -14px; height: 26px; border: none; color: blue" id="fooGrupoSalarial" action="gruposalarial" actionListener="#{controlGrupoSalarial.recibirPagina('cargo')}" value=" "/>
                                     </f:facet>
                                 </p:column>
 
