--- a/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
@@ -15,6 +15,8 @@
 
                     <p:panel  id="PanelTotal" header="Unidades" style="position: absolute; width: 874px; height: 510px; text-align: left">
 
+                        <p:commandButton actionListener="#{controlActualizarConceptos.recibirEmpresa(controlUnidad.secuenciaPruebaConceptoEmpresa)}" style="position: absolute; top: 470px " process="@this" action="adelante" />
+
                         <p:toolbar style=" position: absolute; top: 40px; left: 20px; height: 24px">   
                             <p:toolbarGroup align="left"> 
 
@@ -134,7 +136,7 @@
                                     </f:facet>
                                 </p:column>
                             </p:dataTable>
-                            
+
                             <h:outputText id="informacionRegistro" value="#{controlUnidad.infoRegistro}" style="position: absolute; left: 15px; top: 340px; font-weight: bold"/>
 
                         </fieldset>
