--- a/DesignerRHN/DesignerRHN-war/web/vigenciatalla.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/vigenciatalla.xhtml
@@ -13,10 +13,10 @@
             <ui:define name="body">                  
                 <h:form id="form">                    
                     <p:growl id="growl" showDetail="true"/> 
-                    <p:panel  id="PanelTotal" header="Referencias Familiares" style="position: absolute; width: 874px; height: 510px; text-align: left">  
+                    <p:panel  id="PanelTotal" header="Tallas" style="position: absolute; width: 874px; height: 510px; text-align: left">  
                         <h:outputText style="position: absolute; left: 580px; top: 50px; position: absolute; color: #BF1A1A; font-weight: bold; width: 285px; text-align: right; " id="nombreEmpleado" value="#{controlVigenciasTallas.empleadoSeleccionada.persona.nombreCompleto}"/>
                         <fieldset style="position: absolute;top: 80px;left: 10px;height: 350px;width: 830px; border-radius: 10px; text-align: left">
-                            <legend style="font-size: 14px; color: blue"><strong>Referencias Familiares</strong></legend>
+                            <legend style="font-size: 14px; color: blue"><strong>Tallas</strong></legend>
 
                             <p:dataTable id="datosVigenciasTallas" var="info" rowKey="#{info.secuencia}"  rowIndexVar="indice" style="width: 830px ; border: 1px;"                           
                                          value="#{controlVigenciasTallas.listVigenciasTallas}" scrollable="true" 
@@ -134,13 +134,13 @@
 
                                 <p:separator style="position: relative; top: -9px"/> 
                                 <p:commandButton id="insertar" value="" style="background-image: url(Imagenes/nuevoRegistro.jpg);  background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px "  oncomplete="nuevoRegistroVigenciasTallas.show()" update=":formularioDialogos:nuevooHvReferenciaLab" process="@this"/> 
-                                <p:tooltip style="" for="insertar" value="Nueva Referencia Familiar" />
+                                <p:tooltip style="" for="insertar" value="Nueva Talla" />
 
                                 <p:commandButton id="eliminar" value="" style="background-image: url(Imagenes/delete.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px "  actionListener="#{controlVigenciasTallas.borrandoVigenciasTallas()}" process="@this"/>  
-                                <p:tooltip style="" for="eliminar" value="Eliminar Referencia Familiar" />
+                                <p:tooltip style="" for="eliminar" value="Eliminar Talla" />
 
                                 <p:commandButton id="duplicar" value="" style="background-image: url(Imagenes/duplicar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlVigenciasTallas.duplicandoVigenciasTallas()}" process="@this"/>  
-                                <p:tooltip style="" for="duplicar" value="Duplicar Referencia Familiar" />
+                                <p:tooltip style="" for="duplicar" value="Duplicar Talla" />
                                 <p:separator style="position: relative; top: -9px"/> 
                                 <p:commandButton id="rastro" value="" style="background-image: url(Imagenes/rastro.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlVigenciasTallas.verificarRastro()}" process="@this"/>  
                                 <p:tooltip style="" for="rastro" value="Rastro"/>
@@ -307,7 +307,7 @@
 
 
                     <p:dialog id="nuevoRegistroVigenciasTallas" header="Nuevo Registro" widgetVar="nuevoRegistroVigenciasTallas" closable="false" resizable="false"  draggable="false" modal="true" height="210" width="340" style=" padding: 0px">  
-                        <center><strong><h:outputText id="informacion" value="Ingresar Nuevo Referencia Familiar" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
+                        <center><strong><h:outputText id="informacion" value="Ingresar Nueva Talla" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="nuevooHvReferenciaLab" style="border: none;">
 
@@ -357,7 +357,7 @@
 
 
                     <p:dialog id="duplicarRegistroVigenciasTallas" header="duplicar Registro" widgetVar="duplicarRegistroVigenciasTallas" closable="false" resizable="false"  draggable="false" modal="true" height="210" width="340" style=" padding: 0px">  
-                        <center><strong><h:outputText id="informacionDuplicar" value="Duplicar Referencia Familiar" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
+                        <center><strong><h:outputText id="informacionDuplicar" value="Duplicar Talla" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="duplicarPanelVigenciasTallas" style="border: none;">
 
