--- a/DesignerRHN/DesignerRHN-war/web/clasepension.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/clasepension.xhtml
@@ -13,7 +13,7 @@
                 <h:form id="form"> 
                     <p:growl id="growl" showDetail="true"/> 
                     <p:panel  id="PanelTotal" header="Clase de Pensión" style="position: absolute; width: 874px; height: 510px; text-align: left">    
-                        <fieldset style="position: absolute;top: 80px;left: 10px;height: 350px;width: 830px; border-radius: 10px; text-align: left">
+                        <fieldset style="position: absolute;top: 110px;left: 10px;height: 320px;width: 830px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 14px; color: blue"><strong>Clase Pensión</strong></legend>
 
                             <p:dataTable id="datosClasesPensiones" var="info" rowKey="#{info.secuencia}"  rowIndexVar="indice" style="width: 810px ; border: 1px;"                           
@@ -35,7 +35,7 @@
                                         <f:facet name="input">
                                             <p:inputText value="#{info.codigo}" id="editarCodigo" style="height: 12px;  border-radius: 0px; width: 400px; text-transform: uppercase"  > 
                                                 <p:ajax event="select" listener="#{controlClasesPensiones.cambiarIndice(indice, 0)}" process="@this"/> 
-                                                <p:ajax event="change" listener="#{controlClasesPensiones.modificarClasesPensiones(indice, 'N', info.codigo)}"  update="codigo"/>
+                                                <p:ajax event="change" listener="#{controlClasesPensiones.modificarClasesPensiones(indice, 'N', info.codigo)}"  update="@this"/>
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
