--- a/DesignerRHN/DesignerRHN-war/web/deporte.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/deporte.xhtml
@@ -220,19 +220,19 @@
 
                         <p:panel id="nuevaDeporte" style="border: none;">
 
-                            <strong><h:outputText value="*#{msg['codigoN']}"  style=" position: absolute; top: 60px;text-transform: uppercase" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlDeportes.nuevoDeporte.codigo}" style=" width: 135px; position: absolute; left: 150px; top: 55px;text-transform: uppercase">
+                            <strong><h:outputText value="*#{msg['codigoN']}"  style=" position: absolute; top: 60px;" /></strong>
+                            <p:inputText id="nuevoCodigo" value="#{controlDeportes.nuevoDeporte.codigo}" style=" width: 140px; position: absolute; left: 150px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="#{msg['codigoWM']}" />
 
-                            <strong><h:outputText value="*#{msg['nombreN']}"  style=" position: absolute; top: 90px;text-transform: uppercase" /></strong>
-                            <p:inputText  id="nuevoNombre" value="#{controlDeportes.nuevoDeporte.nombre}" style=" width: 135px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
+                            <strong><h:outputText value="*#{msg['nombreN']}"  style=" position: absolute; top: 90px;" /></strong>
+                            <p:inputText  id="nuevoNombre" value="#{controlDeportes.nuevoDeporte.nombre}" style=" width: 140px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoNombre" value="#{msg['nombreWM']}" />
                             <p:commandButton id="limpiar" icon="ui-icon-trash" value="#{msg['limpiar']}" style=" position: absolute; left: 20px; top: 120px;"  actionListener="#{controlDeportes.limpiarNuevoDeportes()}" update="nuevaDeporte" process="@this"/>
-                            <p:commandButton id="agregarTE" icon="ui-icon-circle-check" value="#{msg['agregar']}" style=" position: absolute; left: 110px; top: 120px;" actionListener="#{controlDeportes.agregarNuevoDeportes()}" process="@this" />
+                            <p:commandButton id="agregarTE" icon="ui-icon-circle-check" value="#{msg['agregar']}" style=" position: absolute; left: 120px; top: 120px;" actionListener="#{controlDeportes.agregarNuevoDeportes()}" process="@this" />
                             <p:commandButton id="cancelarTE" icon="ui-icon-circle-close" value="#{msg['cancelar']}" style=" position: absolute; left: 210px; top: 120px;"  update="nuevaDeporte" onclick="nuevoRegistroDeporte.hide();"  actionListener="#{controlDeportes.limpiarNuevoDeportes()}"  process="@this"/>
                         </p:panel>
                     </p:dialog>
@@ -243,19 +243,19 @@
                         <center><strong><h:outputText id="informacionDuplicar" value="#{msg['ingresarnuevo']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="duplicarDepor" style="border: none;">
-                            <strong><h:outputText value="*#{msg['codigoN']}"  style=" position: absolute; top: 60px;text-transform: uppercase" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlDeportes.duplicarDeporte.codigo}" style=" width: 135px; position: absolute; left: 150px; top: 55px;text-transform: uppercase">
+                            <strong><h:outputText value="*#{msg['codigoN']}"  style=" position: absolute; top: 60px;" /></strong>
+                            <p:inputText id="duplicarCodigo" value="#{controlDeportes.duplicarDeporte.codigo}" style=" width: 140px; position: absolute; left: 150px; top: 55px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="#{msg['codigoWM']}" />
 
-                            <strong><h:outputText value="*#{msg['nombreN']}"  style=" position: absolute; top: 90px;text-transform: uppercase" /></strong>
-                            <p:inputText id="duplicarNombre" value="#{controlDeportes.duplicarDeporte.nombre}"  style=" width: 135px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
+                            <strong><h:outputText value="*#{msg['nombreN']}"  style=" position: absolute; top: 90px;" /></strong>
+                            <p:inputText id="duplicarNombre" value="#{controlDeportes.duplicarDeporte.nombre}"  style=" width: 140px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="*#{msg['nombreWM']}" />
                             <p:commandButton id="limpiarD" icon="ui-icon-trash" value="#{msg['limpiar']}" style=" position: absolute; left: 20px; top: 120px;"  actionListener="#{controlDeportes.limpiarDuplicarDeportes()}" update="duplicarDepor"  process="@this"/>
-                            <p:commandButton id="duplicarVFP" value="#{msg['agregar']}" icon="ui-icon-circle-check" style=" position: absolute; left: 110px; top: 120px;" actionListener="#{controlDeportes.confirmarDuplicar()}"  process="@this" />
+                            <p:commandButton id="duplicarVFP" value="#{msg['agregar']}" icon="ui-icon-circle-check" style=" position: absolute; left: 120px; top: 120px;" actionListener="#{controlDeportes.confirmarDuplicar()}"  process="@this" />
                             <p:commandButton id="cancelarDuplicarVFP" icon="ui-icon-circle-close" value="#{msg['cancelar']}" style=" position: absolute; left: 210px; top: 120px;"  update="duplicarDepor" onclick="duplicarRegistroDeporte.hide();" actionListener="#{controlDeportes.limpiarDuplicarDeportes()}"  process="@this"/>
                         </p:panel>
                     </p:dialog>
